force-app/main/default/objects/Deal_Support_Request__c/Deal_Support_Request__c.object-meta.xml
<CustomObject>
    <description>This Object is used for raising various types of support requests that may be related to a particular Opportunity or an Organisation.</description>
    <label>Deal Support Request</label>
    <nameField>
        <displayFormat>DS-{0000000}</displayFormat>
        <label>Deal Support Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Support Request</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>