force-app/main/default/objects/Deal_Support_Request__c/fields/Additional_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when additional review is required</description>
    <label>Additional Review Required</label>
    <type>Checkbox</type>
</CustomField>