force-app/main/default/objects/Deal_Support_Request__c/fields/APT_Contract__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Deal Support Request</relationshipLabel>
    <relationshipName>Deal_Support_Request</relationshipName>
    <type>Lookup</type>
</CustomField>