force-app/main/default/objects/Deal_Support_Request__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <description>To identify the team currently working on the request.
The field is used to add Queue Name for Credit Management Request DSR.</description>
    <label>Assigned Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Team</fullName>
            </value>
            <value>
                <fullName>Product Specialist Team</fullName>
            </value>
            <value>
                <fullName>Legal Recovery Team</fullName>
            </value>
            <value>
                <fullName>StarTrack Credit Team</fullName>
            </value>
            <value>
                <fullName>SMB South Team - VIC/TAS/WA/SA</fullName>
            </value>
            <value>
                <fullName>SMB North Team - NSW/QLD</fullName>
            </value>
            <value>
                <fullName>Enterprise Team</fullName>
            </value>
            <value>
                <fullName>Government/ LPO Team</fullName>
            </value>
            <value>
                <fullName>Change Bill A/C Detail/Credit Assessment</fullName>
            </value>
            <value>
                <fullName>Credit Limit Review</fullName>
            </value>
            <value>
                <fullName>Unassigned Credit Management Requests</fullName>
            </value>
            <value>
                <fullName>Credit Risk Team</fullName>
            </value>
            <value>
                <fullName>Intermediaries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>