force-app/main/default/objects/Deal_Support_Request__c/fields/Bid_or_Tender_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_or_Tender_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capability Statement</fullName>
            </value>
            <value>
                <fullName>Formal Bid</fullName>
            </value>
            <value>
                <fullName>Pro-active</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Support Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pro-active Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>