force-app/main/default/objects/Deal_Support_Request__c/fields/Billing_Account_Change_of_Details_Desc__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Change_of_Details_Desc__c</fullName>
    <description>The field is capturing the description for change of Billing Account details credit management request.</description>
    <label>Change of Details Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>