force-app/main/default/objects/Deal_Support_Request__c/fields/Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number__c</fullName>
    <description>Billing Number supplied by Finance when a new Account is created in SAP. This allows the Data Team to easily map the SAP Billing account to the SFDC Billing Account</description>
    <inlineHelpText>Please enter the billing number as supplied from Credit (if known)</inlineHelpText>
    <label>Billing Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>