force-app/main/default/objects/Deal_Support_Request__c/fields/Business_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Business_At_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link the Business At Risk record where there is one</description>
    <label>Business At Risk</label>
    <referenceTo>At_Risk_Business__c</referenceTo>
    <relationshipLabel>Deal Support Request</relationshipLabel>
    <relationshipName>Deal_Support_Request</relationshipName>
    <type>Lookup</type>
</CustomField>