force-app/main/default/objects/Deal_Support_Request__c/fields/Compass_Quote_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>Compass_Quote_ID_Link__c</fullName>
    <label>Compass Quote ID Link</label>
    <type>Url</type>
</CustomField>