force-app/main/default/objects/Deal_Support_Request__c/fields/Compass_Quote_Reference__c.field-meta.xml
<CustomField>
    <fullName>Compass_Quote_Reference__c</fullName>
    <description>Record ID from Compass</description>
    <externalId>true</externalId>
    <label>Compass Quote ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>