force-app/main/default/objects/Deal_Support_Request__c/fields/Contract_start_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_start_date__c</fullName>
    <inlineHelpText>What date is the contract expected to commence?</inlineHelpText>
    <label>Date Contract will start/date of renewal</label>
    <type>Date</type>
</CustomField>