force-app/main/default/objects/Deal_Support_Request__c/fields/Credit_Person_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Person_Code__c</fullName>
    <description>The field is capturing credit person code, which is populated from billing account.</description>
    <label>Credit Person Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>