force-app/main/default/objects/Deal_Support_Request__c/fields/Credit_Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Representative_Email__c</fullName>
    <description>Email of Credit Support Staff managing the billing account</description>
    <label>Credit Representative Email</label>
    <type>Email</type>
</CustomField>