force-app/main/default/objects/Deal_Support_Request__c/fields/CTA_Propose_Forum_Attendees__c.field-meta.xml
<CustomField>
    <fullName>CTA_Propose_Forum_Attendees__c</fullName>
    <description>This field stores details of attendees for CTA Propose Forum</description>
    <label>CTA Propose Forum Attendees</label>
    <type>TextArea</type>
</CustomField>