force-app/main/default/objects/Deal_Support_Request__c/fields/CustomerContactID__c.field-meta.xml
<CustomField>
    <fullName>CustomerContactID__c</fullName>
    <formula>CustomerContact1__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Contact ID</label>
    <type>Text</type>
</CustomField>