force-app/main/default/objects/Deal_Support_Request__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date the Bid or Tender is due to be lodged</description>
    <inlineHelpText>When is the Bids or Tender due to be lodged/presented</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>