force-app/main/default/objects/Deal_Support_Request__c/fields/Financial_Month__c.field-meta.xml
<CustomField>
    <fullName>Financial_Month__c</fullName>
    <description>Copy the values over from &apos;Submitted Date&apos; field, grouped by Calendar Month in the report and is used for display on X-Axis on the Credit Support Request Dashboard</description>
    <formula>Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Month</label>
    <type>Date</type>
</CustomField>