force-app/main/default/objects/Deal_Support_Request__c/fields/FY_Managed__c.field-meta.xml
<CustomField>
    <fullName>FY_Managed__c</fullName>
    <description>Financial year managed</description>
    <label>FY Managed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2011/12</fullName>
            </value>
            <value>
                <fullName>2012/13</fullName>
            </value>
            <value>
                <fullName>2013/14</fullName>
            </value>
            <value>
                <fullName>2014/15</fullName>
            </value>
            <value>
                <fullName>2015/16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>