force-app/main/default/objects/Deal_Support_Request__c/fields/How_Many_Months_of_Invoice_Data__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Months_of_Invoice_Data__c</fullName>
    <description>Indicates how many months of invoice data has been attached for this request to be assessed</description>
    <label>How Many Months of Invoice Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>