force-app/main/default/objects/Deal_Support_Request__c/fields/In_Pending_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>In_Pending_Information_Status__c</fullName>
    <label>In Pending Information Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>