force-app/main/default/objects/Deal_Support_Request__c/fields/Invalid_Credit_Person_Code__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Credit_Person_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag is ticked if the Credit Person code does not return any match from the SSSW Routing Ledger Code mapping table.</description>
    <label>Invalid Credit Person Code</label>
    <type>Checkbox</type>
</CustomField>