force-app/main/default/objects/Deal_Support_Request__c/fields/Invoice_Data_in_Excel_Attached__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Data_in_Excel_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate that the invoice date in XL has been attached</description>
    <inlineHelpText>Please check when invoice data in Excel has been attached to the request (attach to Notes &amp; Attachments section on request). For StarTrack - please use template link in help documentation</inlineHelpText>
    <label>Invoice Data in Excel Attached?</label>
    <type>Checkbox</type>
</CustomField>