force-app/main/default/objects/Deal_Support_Request__c/fields/Invoice_No_or_Period_Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No_or_Period_Date_Required__c</fullName>
    <description>The field is capturing the date of the document provided or Invoice Number for &apos;copy of invoice/statement&apos; credit management deal support request.</description>
    <label>Invoice No or Period/Date Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>