force-app/main/default/objects/Deal_Support_Request__c/fields/Is_the_deal_Profitable__c.field-meta.xml
<CustomField>
    <fullName>Is_the_deal_Profitable__c</fullName>
    <label>Is the deal Profitable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>