force-app/main/default/objects/Deal_Support_Request__c/fields/Legal_Related_To_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Legal_Related_To_Previous_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If  this contract is related to any other contract Please provide name of anyone specific from Legal that has been involved previously and attach any relevant documents.</inlineHelpText>
    <label>Legal Related To Previous Contract</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_RequestFtYe</relationshipName>
    <type>Lookup</type>
</CustomField>