force-app/main/default/objects/Deal_Support_Request__c/fields/Lodgement_Point_Name__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Point_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field is a lookup to existing lodgement point records and only accepts with a range of valid organisation unit type codes (i.e LPO, BC, RP).
This field is planned for decommission as part of STP-4232.</description>
    <inlineHelpText>Acceptable Lodgement Point with Organisation Unit Type code including LPO, BC and RP.</inlineHelpText>
    <label>Lodgement Point Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Network__c.Org_Unit_Type__c</field>
            <operation>equals</operation>
            <value>LPO</value>
        </filterItems>
        <filterItems>
            <field>Network__c.Org_Unit_Type__c</field>
            <operation>equals</operation>
            <value>BC</value>
        </filterItems>
        <filterItems>
            <field>Network__c.Org_Unit_Type__c</field>
            <operation>equals</operation>
            <value>RP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Deal Support Request</relationshipLabel>
    <relationshipName>Deal_Support_Request</relationshipName>
    <type>Lookup</type>
</CustomField>