force-app/main/default/objects/Deal_Support_Request__c/fields/Name_of_Product_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Product_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Where there is a Product Specialist engaged</description>
    <inlineHelpText>Where there is a Product Specialist engaged</inlineHelpText>
    <label>Name of Product Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Support_Request7</relationshipName>
    <type>Lookup</type>
</CustomField>