force-app/main/default/objects/Deal_Support_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is lookup to the Opportunity that DSR request is linked to</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Support Request</relationshipLabel>
    <relationshipName>Deal_Support_Request</relationshipName>
    <type>Lookup</type>
</CustomField>