force-app/main/default/objects/Deal_Support_Request__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is field will store the Organisation details to which the DSR request is linked to</description>
    <label>Legal Entity Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Support Request</relationshipLabel>
    <relationshipName>Deal_Support_Request</relationshipName>
    <type>Lookup</type>
</CustomField>