force-app/main/default/objects/Deal_Support_Request__c/fields/Pending_Information_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Information_Reason__c</fullName>
    <description>This field contains reasons for Deal enablement centre team to specify when request is in status Pending Information</description>
    <label>Pending Information Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Remedy Logged With IT</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>