force-app/main/default/objects/Deal_Support_Request__c/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <description>Physical State of the Contact</description>
    <formula>CustomerContact1__r.OtherState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical State</label>
    <type>Text</type>
</CustomField>