force-app/main/default/objects/Deal_Support_Request__c/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <description>Product 2 from At Risk Business Record</description>
    <formula>Business_At_Risk__r.Product_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product 2</label>
    <type>Text</type>
</CustomField>