force-app/main/default/objects/Deal_Support_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>What is the main product this opportunitiy is focused around</description>
    <inlineHelpText>What is the main product this opportunitiy is focused around?</inlineHelpText>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3PL</fullName>
            </value>
            <value>
                <fullName>AaE</fullName>
            </value>
            <value>
                <fullName>Address Post</fullName>
            </value>
            <value>
                <fullName>APGL Commercial Outbound</fullName>
            </value>
            <value>
                <fullName>Australia Post Parcel Contract</fullName>
            </value>
            <value>
                <fullName>Bank@Post</fullName>
            </value>
            <value>
                <fullName>Community Update</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Decipha</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Digital ID</fullName>
            </value>
            <value>
                <fullName>Digital Mailbox</fullName>
            </value>
            <value>
                <fullName>Direct Access</fullName>
            </value>
            <value>
                <fullName>eLetter</fullName>
            </value>
            <value>
                <fullName>eParcel</fullName>
            </value>
            <value>
                <fullName>Express AP</fullName>
            </value>
            <value>
                <fullName>Express Courier International</fullName>
            </value>
            <value>
                <fullName>Express eParcel</fullName>
            </value>
            <value>
                <fullName>Express Post</fullName>
            </value>
            <value>
                <fullName>Financial &amp; Commercial Services</fullName>
            </value>
            <value>
                <fullName>First Direct Solutions</fullName>
            </value>
            <value>
                <fullName>Fulfilio</fullName>
            </value>
            <value>
                <fullName>Fulfilment &amp; Unaddressed</fullName>
            </value>
            <value>
                <fullName>ID&amp;G and F&amp;CS</fullName>
            </value>
            <value>
                <fullName>ID&amp;V</fullName>
            </value>
            <value>
                <fullName>Identity &amp; Government Services</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>International AP</fullName>
            </value>
            <value>
                <fullName>Letters/Trusted Services</fullName>
            </value>
            <value>
                <fullName>Local Pickup and Delivery Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>