force-app/main/default/objects/Deal_Support_Request__c/fields/ProposedProductCombination__c.field-meta.xml
<CustomField>
    <fullName>ProposedProductCombination__c</fullName>
    <label>Proposed Product Combination</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>