force-app/main/default/objects/Deal_Support_Request__c/fields/Rating_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Rating_Integration_Status__c</fullName>
    <description>Store the status from Camunda on Rating Plan Activation. Possible values are  “Error”, “Partial Success” and “Success”</description>
    <label>Rating Integration Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>