force-app/main/default/objects/Deal_Support_Request__c/fields/Rating_Integration_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Rating_Integration_Transaction_Id__c</fullName>
    <description>Store the Rating Plan Transaction Id</description>
    <label>Rating Integration Transaction Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>