force-app/main/default/objects/Deal_Support_Request__c/fields/Record_Submitted_Check__c.field-meta.xml
<CustomField>
    <fullName>Record_Submitted_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to check if record is submitted or not</description>
    <label>Record Submitted Check</label>
    <type>Checkbox</type>
</CustomField>