force-app/main/default/objects/Deal_Support_Request__c/fields/Request_Closed_date__c.field-meta.xml
<CustomField>
    <fullName>Request_Closed_date__c</fullName>
    <formula>IF(ISPICKVAL(Stage__c,&apos;Closed&apos;),NOW(),Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>