force-app/main/default/objects/Deal_Support_Request__c/fields/Request_Triage_Completed__c.field-meta.xml
<CustomField>
    <fullName>Request_Triage_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field signifies that Domestic Pricing Request Triaging has been completed</description>
    <inlineHelpText>Complete this field once you have triaged the pricing request</inlineHelpText>
    <label>Triage of request completed?</label>
    <type>Checkbox</type>
</CustomField>