force-app/main/default/objects/Deal_Support_Request__c/fields/Required_Activity__c.field-meta.xml
<CustomField>
    <fullName>Required_Activity__c</fullName>
    <label>Required Activity (Hours Per Week)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>