force-app/main/default/objects/Deal_Support_Request__c/fields/Returns__c.field-meta.xml
<CustomField>
    <fullName>Returns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returns</label>
    <type>Checkbox</type>
</CustomField>