force-app/main/default/objects/Deal_Support_Request__c/fields/Sales_Team_Display__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Display__c</fullName>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Key Accounts</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>