force-app/main/default/objects/Deal_Support_Request__c/fields/Salesforce_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Customer_Number__c</fullName>
    <description>To display the Organisational Number for the DSR</description>
    <formula>Organisation__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Customer Number</label>
    <type>Text</type>
</CustomField>