force-app/main/default/objects/Deal_Support_Request__c/fields/SolutionRecommendations__c.field-meta.xml
<CustomField>
    <fullName>SolutionRecommendations__c</fullName>
    <label>Solution Recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>