force-app/main/default/objects/Deal_Support_Request__c/fields/Stage_Days__c.field-meta.xml
<CustomField>
    <fullName>Stage_Days__c</fullName>
    <description>Number of days the Legal Support request spent at the previous Status</description>
    <inlineHelpText>Number of days the Legal Support request spent at the previous Status</inlineHelpText>
    <label>Stage Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>