force-app/main/default/objects/Deal_Support_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the request</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request for Review Outcome</fullName>
            </value>
            <value>
                <fullName>Closed-Disqualified</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Information</fullName>
            </value>
            <value>
                <fullName>Received Information</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Referred to Legal</fullName>
            </value>
            <value>
                <fullName>Pending Information - Sales</fullName>
            </value>
            <value>
                <fullName>Pending Information - Credit</fullName>
            </value>
            <value>
                <fullName>Pending Information - Pricing</fullName>
            </value>
            <value>
                <fullName>Pending Information - Product</fullName>
            </value>
            <value>
                <fullName>Pending Information - Legal</fullName>
            </value>
            <value>
                <fullName>Pending Information - Support</fullName>
            </value>
            <value>
                <fullName>Pending Information - Processing</fullName>
            </value>
            <value>
                <fullName>Pending Information - Other</fullName>
            </value>
            <value>
                <fullName>Remedy Logged With IT</fullName>
            </value>
            <value>
                <fullName>Completed - Closed</fullName>
            </value>
            <value>
                <fullName>Completed - Business Lost</fullName>
            </value>
            <value>
                <fullName>Completed - Business Retained</fullName>
            </value>
            <value>
                <fullName>Completed - Product Migration</fullName>
            </value>
            <value>
                <fullName>Completed - Channel Migration</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Roadblock</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
                <isActive>false</isActive>
                <label>Approval Required</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Assign to Bid Manager</fullName>
                <isActive>false</isActive>
                <label>Assign to Bid Manager</label>
            </value>
            <value>
                <fullName>Awaiting</fullName>
                <isActive>false</isActive>
                <label>Awaiting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>