force-app/main/default/objects/Deal_Support_Request__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <formula>&apos;https://stest.npe.auspost.com.au/help/#/survey/&apos;+Id+&apos;/&apos;+ CustomerContact1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey</label>
    <type>Text</type>
</CustomField>